# Moon

./: .gitignore  CHANGELOG2025.md  CMakeLists.txt  README.md  build.sh
Examples/: bytecode1.md
Include/: arithmetic_operations.h  arithmetic_operations.hpp  jump_operations.h  memory.hpp  opc_bool.h  opc_bool.hpp  opcode_ids.h  opcode_ids.hpp  stack.hpp  vm.h  vm.hpp
docs/: build.md  bytecode.md  write_bytecode.md
src/: main.cpp  vm.cpp
src/arith/: arith.cpp
src/jump/: jump.cpp
src/memory/: memory.cpp
src/opc_bool/: bool.cpp  cmp.cpp
src/stack/: stack.cpp
